--- a/app/src/main/res/layout/activity_candle.xml
+++ b/app/src/main/res/layout/activity_candle.xml
@@ -24,13 +24,21 @@
         android:text="अजून माहितीसाठी डाऊनलोड करा ट्रेडिंग मराठी ॲप"
         android:gravity="center"/>
 
-    <com.mopub.mobileads.MoPubView
-    android:id="@+id/adview"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_centerHorizontal="true"
-    android:layout_alignParentBottom="true"
-    app:moPubAdSize="match_view">
-  </com.mopub.mobileads.MoPubView>
+<!--    <com.mopub.mobileads.MoPubView-->
+<!--    android:id="@+id/adview"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="70dp"-->
+<!--    android:layout_centerHorizontal="true"-->
+<!--    android:layout_alignParentBottom="true"-->
+<!--    app:moPubAdSize="match_view">-->
+<!--  </com.mopub.mobileads.MoPubView>-->
+
+    <com.startapp.sdk.ads.banner.Banner
+        android:id="@+id/startAppBanner"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
 
 </LinearLayout>
