--- a/app/src/main/res/layout/activity_qand_n.xml
+++ b/app/src/main/res/layout/activity_qand_n.xml
@@ -13,12 +13,20 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <com.mopub.mobileads.MoPubView
-        android:id="@+id/adview"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        app:moPubAdSize="match_view">
-    </com.mopub.mobileads.MoPubView>
+<!--    <com.mopub.mobileads.MoPubView-->
+<!--        android:id="@+id/adview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        app:moPubAdSize="match_view">-->
+<!--    </com.mopub.mobileads.MoPubView>-->
+
+    <com.startapp.sdk.ads.banner.Banner
+        android:id="@+id/startAppBanner"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
 </LinearLayout>
