--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -192,6 +192,15 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
+                <com.startapp.sdk.ads.banner.Banner
+                    android:id="@+id/startAppBanner"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:padding="12dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
