--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -28,6 +28,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -62,6 +63,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/open_upstox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -69,7 +71,6 @@
                         android:drawableRight="@drawable/open"
                         android:drawablePadding="10dp"
                         android:padding="10dp"
-                        android:id="@+id/open_upstox"
                         android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -96,9 +97,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:padding="10dp"
                         android:text="Angle Broking"
                         android:textColor="@color/black"
-                        android:padding="10dp"
                         android:textSize="30sp"
                         android:textStyle="bold" />
 
@@ -112,6 +113,7 @@
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/open_angle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -119,7 +121,6 @@
                         android:drawableRight="@drawable/open"
                         android:drawablePadding="10dp"
                         android:padding="5dp"
-                        android:id="@+id/open_angle"
                         android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -128,11 +129,9 @@
 
                 </LinearLayout>
 
-                <com.startapp.sdk.ads.banner.Banner
-                    android:id="@+id/startAppBanner"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
+                <com.startapp.sdk.ads.banner.Mrec
+                    android:id="@+id/startAppMrec"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true" />
 
@@ -155,8 +154,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Zerodha"
                         android:padding="10dp"
+                        android:text="Zerodha"
                         android:textColor="@color/black"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -165,12 +164,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="@string/zerodha_fe"
                         android:padding="10dp"
+                        android:text="@string/zerodha_fe"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
                     <Button
+                        android:id="@+id/open_zerodha"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -178,7 +178,6 @@
                         android:drawableRight="@drawable/open"
                         android:drawablePadding="10dp"
                         android:padding="5dp"
-                        android:id="@+id/open_zerodha"
                         android:text="Open Accpount"
                         android:textAlignment="center"
                         android:textAllCaps="false"
@@ -189,17 +188,17 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="@string/opennow_last"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/basic_bg"
-                    android:layout_height="wrap_content"/>
+                    android:gravity="center"
+                    android:text="@string/opennow_last"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"/>
+                    android:layout_height="100dp" />
 
             </LinearLayout>
 
