--- a/app/src/main/res/layout/activity_basic.xml
+++ b/app/src/main/res/layout/activity_basic.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp">
+        android:layout_height="wrap_content">
         <!--      <com.mopub.mobileads.MoPubView-->
         <!--          android:id="@+id/adview"-->
         <!--          android:layout_width="match_parent"-->
